--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="Vin35RWS1XtORiHOAMtHLsGj710GP12zvhokr6N-Ays" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MQXW198ZXC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MQXW198ZXC');
+</script>
     <title>FreeCineApp: Elevando Sua Experiência de Entretenimento</title>
     <meta name="description" content="O FreeCineApp oferece uma vasta gama de filmes, séries da web, anime e dramas coreanos, tudo ao alcance de suas mãos.">
     <meta name="keywords" content="FreeCineApp, streaming, filmes, séries, entretenimento, Brasil">
