--- a/index.html
+++ b/index.html
@@ -14,6 +14,37 @@
 
   gtag('config', 'G-MQXW198ZXC');
 </script>
+    <!-- Schema markup -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "url": "https://freecineapp.github.io/",
+            "name": "FreeCineApp",
+            "description": "Uma plataforma de streaming gratuita com uma vasta gama de filmes, séries, anime e dramas coreanos."
+        }
+    </script>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "FreeCineApp: Elevando Sua Experiência de Entretenimento",
+            "author": {
+                "@type": "Organization",
+                "name": "FreeCineApp"
+            },
+            "datePublished": "2024-05-20",
+            "description": "O FreeCineApp oferece uma vasta gama de filmes, séries da web, anime e dramas coreanos, tudo ao alcance de suas mãos.",
+            "publisher": {
+                "@type": "Organization",
+                "name": "FreeCineApp",
+                "logo": {
+                    "@type": "ImageObject",
+                    "url": "https://freecineapp.github.io/logo.png"
+                }
+            }
+        }
+    </script>
     <title>FreeCineApp: Elevando Sua Experiência de Entretenimento</title>
     <meta name="description" content="O FreeCineApp oferece uma vasta gama de filmes, séries da web, anime e dramas coreanos, tudo ao alcance de suas mãos.">
     <meta name="keywords" content="FreeCineApp, streaming, filmes, séries, entretenimento, Brasil">
