--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ footer p {
         <h1>FreeCineApp: Elevando Sua Experiência de Entretenimento</h1>
     </header>
     <article>
+         <img src="https://freecineapp.github.io/logo.png" alt="freecineapp logo">
         <h2>Introdução ao FreeCineApp</h2>
         <p>No seu núcleo, o FreeCineApp é mais do que apenas uma plataforma de streaming; é um portal para uma experiência de entretenimento imersiva. Com sua interface intuitiva e extensa biblioteca de conteúdo, o FreeCineApp atende a um público diversificado, garantindo que haja algo para todos. Seja você fã de sucessos de Hollywood, joias independentes ou anime de nicho, o FreeCineApp promete satisfazer suas vontades por conteúdo envolvente.</p>
 
